Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9499

sanity-lfsck test_18f: @@@@@@ FAIL: (2) MDS3 is not the expected 'partial'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.10.0, Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      CMD: trevis-16vm4 /usr/sbin/lctl get_param -n 			mdd.lustre-MDT0002.lfsck_layout |
      			awk '/^status/ { print \$2 }'
      Update not seen after 120s: wanted 'partial' got 'completed'
       sanity-lfsck test_18f: @@@@@@ FAIL: (2) MDS3 is not the expected 'partial' 
      

      The following a few recent failures.

      2017-04-28 - https://testing.hpdd.intel.com/test_sets/ed367a48-2c4f-11e7-814a-5254006e85c2
      2017-04-27 - https://testing.hpdd.intel.com/test_sets/15b9bf12-2bcd-11e7-814a-5254006e85c2
      2017-04-22 - https://testing.hpdd.intel.com/test_sets/6284d2d4-27a2-11e7-9de9-5254006e85c2

            yong.fan nasf (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: